--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.10
   flutter_riverpod: ^2.0.0-dev.9
+  image_picker: ^0.8.6+1
+  photo_manager: ^2.5.2
 
 flutter_native_splash: 
   color: "#FFFFFF"
