--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -62,5 +62,10 @@
 		<true />
 		<key>UIStatusBarHidden</key>
 		<false />
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app requires access to the photo library.</string>
+		<!-- <key>NSCameraUsageDescription</key>
+		<string>This app requires access to the
+		camera.</string> -->
 	</dict>
 </plist>
