--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,5 +67,7 @@
 		<!-- <key>NSCameraUsageDescription</key>
 		<string>This app requires access to the
 		camera.</string> -->
+		<key>NSContactsUsageDescription</key>
+		<string>Reason we need access to the contact list</string>
 	</dict>
 </plist>
